fix include justify-content & align-items

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -7,8 +7,8 @@
     background-color: rgba(75, 193, 210, 0);
     .header-menu {
         @include flexbox();
-        justify-content: space-between;
-        align-items: center;
+        @include justify-content(space-between);
+        @include align-items(center);
         .link-logo {
             width: 50%;
             .b-logo {
